# city-wallet-recommendation

./: .gitignore  README.md  api.py  gemini_ui.md  index.html  package-lock.json  pyproject.toml
app/: App.jsx  App.test.jsx  MerchantView.jsx  PreferenceSheet.jsx  QRCode.jsx  TabBar.jsx  api.js  city_wallet.db  index.css  index.html  package-lock.json  package.json
app/components/merchant/: LiveStats.jsx  MerchantView.jsx  OfferFeed.jsx  RuleModal.jsx
app/components/user/: ContextBar.jsx  DismissToast.jsx  OfferCard.jsx  QRScreen.jsx  SuccessScreen.jsx  UserView.jsx
app/components/user/__tests__/: ContextBar.test.jsx  UserView.test.jsx  lifecycleBoundary.test.jsx
app/lib/: preferenceHistory.js  privacyBoundary.js  walletPreferences.js
app/lib/__tests__/: privacyBoundary.test.js  walletPreferences.test.js
app/lib/localPersonalization/: gemma4WebHumanizer.js  index.js  mergeLocalText.js  resolveDisplayOffer.js  restrictedCategory.js  runtime.js  sanitize.js
app/lib/photo/: photoCapability.js
app/lib/photo/__tests__/: photoCapability.test.js
app/lib/voice/: speechRecognition.js
app/public/models/: README.md
app/scripts/: pull-gemma4-e4b.mjs  run-vitest.mjs
backend/: api.py  app.py  rules.py
data/google/: merchants.parquet  weather.parquet
docs/: backend.md
scripts/: verify-s05.sh
src/: App.jsx  constants.js  index.css
src/backend/: api.py  db.py  gather_data.py  store_data.py
src/components/: QRCode.jsx  TabBar.jsx
src/components/merchant/: RulePanel.jsx
src/components/user/: OfferCard.jsx  QRScreen.jsx  SuccessScreen.jsx  UserView.jsx
(+9 files in other folders)
